[tool.poetry]
name = "attackontyping"
version = "0.1.0"
description = ""
authors = ["PyDrummer <anthonybeavermusic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^6.1.1"
pytest-watch = "^4.2.0"
coverage = "^5.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
