[tool.poetry]
name = "attackontyping"
version = "0.1.0"
description = ""
authors = ["PyDrummer <anthonybeavermusic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^6.1.1"
pytest = "^6.2.2"
colorama = "^0.4.4"
pyfiglet = "^0.8.post1"
coverage = "^5.4"
mock = "^4.0.3"
pytest-mock = "^3.5.1"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"